Fix display of location when wrapping across multiple lines

--- a/_sass/modules/post/_rules.scss
+++ b/_sass/modules/post/_rules.scss
@@ -83,7 +83,15 @@
         letter-spacing: 0.04em;
         text-transform: uppercase;
         margin-right: 5px;
-        line-height: 1.2;
+
+        // A line-height of 1.2 makes our font (Bodoni) align well horizontally with
+        // the paragraph font (Caslon) however we need to ensure that the location
+        // text displays nicely if wrapped across multiple lines. To solve this,
+        // we increase the line-height while offsetting it's position upwards slightly.
+        // This will keep the alignment between Bodoni & Caslon AND wrap nicely.
+        line-height: 1.4;
+        position: relative;
+        top: -2px;
     }
 
     .post-body-location-divider {
